[package]
name = "pekerustallround1"
version = "0.1.0"
authors = ["peke"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dependencies]
proxy-wasm = "0.1.3"
log = "0.4.8"
serde_json = "1.0"
